objects/Event__c.object
<CustomObject>
    <fields>
        <fullName>Agenda__c</fullName>
        <label>Agenda</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Group_Excercise__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Group Excercise</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hands_On__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hands On</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lecture__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lecture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location_Address__c</fullName>
        <label>Location Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Max_Attendants__c</fullName>
        <label>Max # Attendants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quick_Tutorials__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quick Tutorials</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Proposed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Dreamforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloudforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meetup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Workbook__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Workbook</label>
        <type>Checkbox</type>
    </fields>
    <label>Event</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>